--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
-body{
-  background-color: cyan;
+* {
+  margin: 100;
+  padding: 100;
+  box-sizing: border-box;
+}
+  h1 {
+    font-family: fairwater-deco-serif, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+}
+  body {
+    font-family: fairwater-solid-serif, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+}
+  div {
+  color: #FFF;
+  background-color: mediumturquoise;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+  border-radius: 20px;
 }
