--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   font-size: 50px;
 }
   body {
-    font-family: fairwater-solid-serif, sans-serif;
+    font-family: fairwater-open-serif, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
