--- a/placeWebsite/css/main.css
+++ b/placeWebsite/css/main.css
@@ -13,6 +13,7 @@ body {
   font-family: cormorant-garamond, serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 20px;
 }
 img {
   width: 1440px;
