--- a/E9/css/main.css
+++ b/E9/css/main.css
@@ -110,48 +110,107 @@ body {
   display: flow-root;
 }
 .left1 {
-  width: 150px;
-  height: 350px;
+  width: 100px;
+  height: 360px;
   background-color: tomato;
   margin-left: 0px;
   margin-right: 10px;
   float: left;
 }
 .middletop {
-  width: 500px;
+  width: 510px;
   height: 100px;
-  background-color: tomato;
+  background-color: red;
   margin-left: 0px;
   margin-right: 0px;
-  float: left;
 }
 .square1 {
-  width: 240px;
-  height: 240px;
+  width: 250px;
+  height: 250px;
   background-color: blue;
   margin-left: 0px;
-  margin-right: 10px;
+  margin-right: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
   float: left;
 }
 .square2 {
-  width: 240px;
-  height: 240px;
+  width: 250px;
+  height: 250px;
   background-color: green;
-  margin-left: 10px;
+  margin-left: 5px;
   margin-right: 0px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  float: left;
+}
+.middle {
   float: left;
 }
 .right1 {
-  width: 150px;
-  height: 350px;
+  width: 100px;
+  height: 360px;
   background-color: orange;
   margin-left: 10px;
   margin-right: 0px;
   margin-top: 0px;
   margin-bottom: 100px;
+  float: left;
+}
+.top {
+  float:left;
+}
+.left2 {
+  width: 100px;
+  height: 360px;
+  background-color: gold;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  float: left;
+}
+.square3 {
+  width: 250px;
+  height: 250px;
+  background-color: aqua;
+  margin-left: 10px;
+  margin-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  float: left;
+}
+.square4 {
+  width: 250px;
+  height: 250px;
+  background-color: purple;
+  margin-left: 5px;
+  margin-right: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  float: left;
+}
+.middlebottom {
+  width: 510px;
+  height: 100px;
+  background-color: lavender;
+  margin-left: 10px;
+  margin-right: 0px;
+  margin-top: 260px;
+  margin-bottom: 0px;
+}
+.middle2{
+  float: left;
+}
+.right2 {
+  width: 100px;
+  height: 360px;
+  background-color: pink;
+  margin-left: opx;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 100px;
+  float: left;
+}
+.bottom {
   float: left;
 }
