--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 * {
-  margin: 100;
-  padding: 100;
+  /* margin: 100;
+  padding: 100; */
   box-sizing: border-box;
 }
   h1 {
@@ -15,7 +15,7 @@
     font-style: normal;
     font-size: 20px;
 }
-  div {
+  header {
   color: #FFF;
   background-color: mediumturquoise;
   font-weight: bold;
@@ -23,3 +23,14 @@
   text-align: center;
   border-radius: 20px;
 }
+  main {
+    width: 75vw;
+    margin: 25px auto;
+    background-color: ;
+    display: flow-root;
+  }
+  .column {
+    width: 50%;
+    background-color: ;
+    float: left;
+  }
