--- a/E11/css/main.css
+++ b/E11/css/main.css
@@ -2,7 +2,14 @@
     background-color: black;
     margin: 15px auto;
   }
-
+  @media screen and (max-width: 1100px) {
+    h1 {
+      font-size: 100px;
+    }
+    P {
+      font-size: 16px;
+    }
+  }
   p {
     color: white;
     font-family: American Typewriter ITC Pro Light;
@@ -36,7 +43,7 @@
     opacity: 30%;
   }
   main {
-    width: 850px;
+    width: 866px;
     margin-right: 250px;
   }
   header {
