--- a/E11/css/main.css
+++ b/E11/css/main.css
@@ -1,61 +1,16 @@
   * {
-    background-color: black;
-    margin: 15px auto;
-  }
-  @media screen and (max-width: 1100px) {
-    h1 {
-      font-size: 100px;
-    }
-    p {
-      font-size: 16px;
-    }
-  }
-  p {
-    color: white;
-    font-family: American Typewriter ITC Pro Light;
-    font-style: light;
-    font-size: 21px;
+    margin: 10px;
+    box-sizing: border-box;
   }
   h1 {
-    color: white;
-    font-family: American Typewriter ITC Pro;
+    font-family: fairwater-deco-serif, sans-serif;
     font-weight: 400;
-    font-style: medium;
-    font-size: 37px;
+    font-style: normal;
+    font-size: 50px;
   }
-  h3 {
-    color: white;
-    font-family: American Typewriter ITC Pro;
+  body {
+    font-family: fairwater-open-serif, sans-serif;
     font-weight: 400;
-    font-style: medium;
-    font-size: 25px;
-  }
-  h2 {
-    color: #FF0000;
-    font-family: American Typewriter ITC Pro;
-    font-weight: 400;
-    font-style: medium;
-    text-transform: uppercase;
-    font-size: 30px;
-    opacity: 65%;
-  }
-  img{
-    opacity: 30%;
-  }
-  main {
-    width: 866px;
-    margin-right: 250px;
-  }
-  header {
-    width: 850px;
-    margin-right: 100px;
-    margin-top: 100px;
-  }
-  .raven {
-    width: 276px;
-    height: 276px;
-    margin-left: 700px;
-  }
-  .text{
-    line-height: 30px;
+    font-style: normal;
+    font-size: 20px;
   }
