--- a/website/css/main.css
+++ b/website/css/main.css
@@ -1,6 +1,6 @@
 * {
-  margin: 100;
-  padding: 100;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 h1, h2{
@@ -18,19 +18,57 @@ body {
   font-style: normal;
   font-size: 20px;
 }
-img {
+/* img {
   display; block;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-}
-p {
-  text-align: left;
-}
+} */
 li{
   display: inline;
   text-transform: uppercase;
+  margin-right: 20px;
 }
+
+a { text-decoration: none; color:white;
+}
+a:visited { text-decoration: red;
+}
+a:hover { text-decoration: gray;
+}
+a:focus { text-decoration: none;
+}
+a:hover, a:active { text-decoration: gray;
+}
+
+.pageheader {
+  color: white;
+  font-size: 80px;
+  text-transform: uppercase;
+}
+.HomeImage {
+  background-image: url('../images/portoOverlookzoom.jpg');
+  padding: 50px;
+  height: 660px;
+  background-size: cover;
+  background-position: center;
+}
+
+.hometext {
+  font-size: 25px;
+  text-align: center;
+  margin: 30px 30px 50px;
+}
+
+
+
+
+
+
+
+
+
+
 .logo {
   width: 73px;
   height: 38px;
@@ -42,6 +80,7 @@ li{
   margin: 0 auto;
   text-align: center;
 }
+
 .boat {
   width: 70%;
   height: 70%;
