--- a/website/css/main.css
+++ b/website/css/main.css
@@ -1,112 +1,210 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-h1, h2{
-  font-family: cormorant-garamond, serif;
-  font-weight: 700;
-  font-style: normal;
-  text-transform: uppercase;
-}
-h2 {
-  font-size: 30px;
-}
-body {
-  font-family: cormorant-garamond, serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 20px;
-}
-/* img {
-  display; block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-} */
-li{
-  display: inline;
-  text-transform: uppercase;
-  margin-right: 20px;
-}
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  h1, {
+    font-family: cormorant-garamond, serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    font-size: 50px;
+  }
+  h2 {
+    font-family: cormorant-garamond, serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    font-size: 30px;
+  }
+  body {
+    font-family: cormorant-garamond, serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+  }
+  li{
+    display: inline;
+    text-transform: uppercase;
+    margin-right: 20px;
+  }
+  a:link, a:visited, a:active {
+    color:white;
+    text-decoration: none;
+  }
+  a:hover {
+    color: gray;
+  }
 
-a:link, a:visited, a:active {
-  color:white;
-  text-decoration: none;
-}
-a:focus {
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: gray;
-}
+  .pageheader {
+    color: white;
+    font-size: 45px;
+    text-transform: uppercase;
+  }
+  .HomeImage {
+    background-image: url('../images/portoOverlookzoom.jpg');
+    padding: 50px;
+    height: 660px;
+    background-size: cover;
+    background-position: center;
+  }
 
-.pageheader {
-  color: white;
-  font-size: 80px;
-  text-transform: uppercase;
-}
-.HomeImage {
-  background-image: url('../images/portoOverlookzoom.jpg');
-  padding: 50px;
-  height: 660px;
-  background-size: cover;
-  background-position: center;
-}
+  .text {
+    font-size: 20px;
+    text-align: center;
+    width: 75vw;
+    margin: 30px auto 50px;
+  }
 
-.hometext {
-  font-size: 23px;
-  text-align: center;
-  margin: 30px 30px 50px;
-}
+  footer {
+    text-align: center;
+  }
+  .logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .logo {
+    width: 73px;
+    height: 38px;
+    background-image: url('../images/logos.png');
+    align-content: center;
+    margin: auto;
+  }
+  .footer {
+    margin: auto;
+    text-align: center;
+  }
 
-footer {
-  text-align: center;
-}
-.logo {
-  margin-left: auto;
-  margin-right: auto;
-}
+  .boat {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .bridge {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .library {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .railway {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .palace {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .church {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .rivera{
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .bridges{
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .train {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .tarts {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .lellolibrary {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .igrejachurch {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .clerigoschurch {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .majestic {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .road {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .cable {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
+  .paparico {
+    width: 70%;
+    height: 70%;
+    align-content: center;
+    margin: auto;
+  }
   @media screen and (max-width: 850px) {
     .pageheader {
       font-size: 50px;
     }
-
   @media screen and (max-width: 550px) {
     .pageheader {
       font-size: 45px;
     }
-
-
   @media screen and (max-width: 500px) {
     .pageheader {
       font-size: 40px;
-      text-align: center;
     }
     li {
       font-size: 18px;
       margin-right: 10px;
       text-align: center;
     }
-
-
-
   @media screen and (max-width: 450px) {
     .pageheader {
       font-size: 35px;
     }
-
-
-
   @media screen and (max-width: 320px) {
     .pageheader {
       font-size: 26px;
-      text-align: center;
     }
     .HomeImage {
       padding: 20px;
       height: 250px;
-    }
     }
     li {
       font-size: 14px;
@@ -120,120 +218,3 @@ footer {
     .footer {
       font-size: 14px;
     }
-
-
-
-.logo {
-  width: 73px;
-  height: 38px;
-  background-image: url('../images/logos.png');
-  align-content: center;
-  margin: auto;
-}
-.footer {
-  margin: auto;
-  text-align: center;
-}
-
-.boat {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.bridge {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.library {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.railway {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.palace {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.church {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.rivera{
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.bridges{
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.train {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.tarts {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.lellolibrary {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.igrejachurch {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.clerigoschurch {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.majestic {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.road {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.cable {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
-.paparico {
-  width: 70%;
-  height: 70%;
-  align-content: center;
-  margin: auto;
-}
