--- a/E12/css/main.css
+++ b/E12/css/main.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
   }
   body {
-    display: inline-inline-block;
-    max-width: 100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
   }
   .leftcontrol {
     width: 130px;
@@ -16,7 +17,7 @@
     border: 5px solid #0F92A8;
     float: left;
   }
-  .screen {
+  .screenbezel {
     width: 725px;
     height: 400px;
     background-color: #2E2E2E;
@@ -33,8 +34,8 @@
     float: left;
   }
   .leftjoystick {
-    width: 70px;
-    height: 70px;
+    width: 65px;
+    height: 65px;
     border-radius: 50%;
     background-color: gray;
     border: 5px solid #2E2E2E;
@@ -45,9 +46,124 @@
   .minusbutton {
     width: 25px;
     height: 8px;
-    border-radius: 5%;
+    border-radius: 10%;
     background-color: #2E2E2E;
     position: relative;
     top: 30px;
     left: 85px;
+  }
+  .cbutton {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: gray;
+    border: 3px solid #2E2E2E;
+    position: relative;
+    top: 160px;
+    left: 52px;
+  }
+  .cbuttonUP {
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 12px solid #2E2E2E;
+    position: relative;
+    top: 138px;
+    left: 60px;
+  }
+  .cbutton1 {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: gray;
+    border: 3px solid #2E2E2E;
+    position: relative;
+    top: 180px;
+    left: 52px;
+  }
+  .cbuttonDOWN {
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 12px solid #2E2E2E;
+    position: relative;
+    top: 160px;
+    left: 60px;
+  }
+  .cbutton2 {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: gray;
+    border: 3px solid #2E2E2E;
+    position: relative;
+    top: 107px;
+    left: 20px;
+  }
+  .cbuttonLEFT {
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-right: 12px solid #2E2E2E;
+    border-bottom: 7px solid transparent;
+    position: relative;
+    top: 85px;
+    left: 27px;
+  }
+  .cbutton3 {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: gray;
+    border: 3px solid #2E2E2E;
+    position: relative;
+    top: 63px;
+    left: 84px;
+  }
+  .cbuttonRIGHT {
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-left: 12px solid #2E2E2E;
+    border-bottom: 7px solid transparent;
+    position: relative;
+    top: 41px;
+    left: 95px;
+  }
+  .screenshot {
+    width: 25px;
+    height: 25px;
+    background-color: gray;
+    border: 3px solid #2E2E2E;
+    position: relative;
+    top: 95px;
+    left: 80px;
+  }
+  .screenshotcircle {
+    width: 15px;
+    height: 15px;
+    background-color: #2E2E2E;
+    border-radius: 50%;
+    position: relative;
+    top: 75px;
+    left: 85px;
+  }
+  .mainscreen {
+    width: 620px;
+    height: 300px;
+    background-color: gray;
+    position: relative;
+    top: -170px;
+    left: 180px;
+  }
+  .plusbutton {
+    width: 25px;
+    height: 7px;
+    border-radius: 10%;
+    background-color: #2E2E2E;
+    position: relative;
+    top: 0px;
+    right: 0px;
   }
