--- a/website/css/main.css
+++ b/website/css/main.css
@@ -3,12 +3,22 @@
     padding: 0;
     box-sizing: border-box;
   }
+  body {
+    margin: 0px 0 35px 0;
+    font-family: cormorant-garamond, serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 19px;
+    text-align: center;
+    color: #707070;
+  }
   h1, {
     font-family: cormorant-garamond, serif;
     font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
     font-size: 50px;
+    color: #707070;
   }
   h2 {
     font-family: cormorant-garamond, serif;
@@ -16,13 +26,7 @@
     font-style: normal;
     text-transform: uppercase;
     font-size: 30px;
-  }
-  body {
-    margin: 0 0 10px 0;
-    font-family: cormorant-garamond, serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
+    color: #707070;
   }
   li{
     display: inline;
@@ -36,14 +40,16 @@
   a:hover {
     color: gray;
   }
-
   .sights, .about, .twentyfourhours {
-    width: 70%;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   img {
     max-width: 100%;
+    margin-bottom: 10px;
   }
   .pageheader {
     color: white;
@@ -69,20 +75,22 @@
     width: 75vw;
     margin: 30px auto 50px;
   }
+  .boat {
+    margin-top: 45px;
+  }
+  section {
+    margin-top: 50px;
+  }
   footer {
     text-align: center;
     font-size: 18px;
   }
   .logo {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .logo {
     width: 73px;
     height: 38px;
     background-image: url('../images/logos.png');
-    align-content: center;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (max-width: 850px) {
     .pageheader {
@@ -126,5 +134,4 @@
       margin: 20px 50px;
     }
     footer {
-
     }
