--- a/website/css/main.css
+++ b/website/css/main.css
@@ -19,6 +19,7 @@
     text-transform: uppercase;
     font-size: 50px;
     color: #707070;
+    text-align: center;
   }
   h2 {
     font-family: cormorant-garamond, serif;
@@ -47,6 +48,12 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
+  .sights, .twentyfourhours {
+    text-align: left;
+  }
+  nav {
+    text-align: left;
+  }
   img {
     max-width: 100%;
     margin-bottom: 10px;
@@ -55,6 +62,7 @@
     color: white;
     font-size: 45px;
     text-transform: uppercase;
+    text-align: left;
   }
   .HomeImage {
     background-image: url('../images/portoOverlookzoom.jpg');
