--- a/website/css/main.css
+++ b/website/css/main.css
@@ -12,22 +12,24 @@
     text-align: center;
     color: #707070;
   }
-  h1, {
+  h1 {
     font-family: cormorant-garamond, serif;
-    font-weight: 400;
+    font-weight: 700;
     font-style: normal;
     text-transform: uppercase;
     font-size: 50px;
     color: #707070;
     text-align: center;
   }
-  h2 {
+  h3 {
     font-family: cormorant-garamond, serif;
-    font-weight: 400;
+    font-weight: 700;
     font-style: normal;
-    text-transform: uppercase;
-    font-size: 30px;
+    font-size: 25px;
     color: #707070;
+  }
+  p {
+    margin-bottom: 25px;
   }
   li{
     display: inline;
@@ -60,7 +62,7 @@
   }
   .pageheader {
     color: white;
-    font-size: 45px;
+    font-size: 80px;
     text-transform: uppercase;
     text-align: left;
   }
