--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,9 @@
     background-color: ;
     float: left;
   }
+  a:link, a:visited, a:active {
+    color:black;
+    text-decoration: none;
+  }
+  a:hover {
+    color: mediumturquoise;
