--- a/E12/css/main.css
+++ b/E12/css/main.css
@@ -8,7 +8,7 @@
     margin: 130px;
     margin-left: auto;
     margin-right: auto;
-    background-color: gray;
+    background-color: gray;haha
   }
   .leftcontrol {
     width: 130px;
